--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -1,3 +1,3 @@
-error.no_space=&cInventory full. Could not complete withdrawal.
-error.inventory_full_retry=&cInventory full. Retrying in {seconds} seconds.
+withdrawal.inventory_full_pending=&cYou have {count} pending withdrawals, but your inventory is full. Trying again in {seconds} seconds.
 success.withdrawal=&aWithdrawal successful. {summary}.
+error.withdrawal=&cWithdrawal failed: {reason}.
