--- a/src/main/resources/lang/messages_es.properties
+++ b/src/main/resources/lang/messages_es.properties
@@ -1,3 +1,3 @@
-error.no_space=&cInventario lleno. No se pudo completar el retiro.
-error.inventory_full_retry=&cInventario lleno. Reintentando en {seconds} segundos.
+withdrawal.inventory_full_pending=&cTienes {count} retiros pendientes, pero tu inventario está lleno. Intentando de nuevo en {seconds} segundos.
 success.withdrawal=&aRetiro exitoso. {summary}.
+error.withdrawal=&cFalha no retiro: {reason}.
